yacc/cminus.output
Terminals unused in grammar

   ERROR
   COMMENT
   COMMENT_ERROR


Grammar

    0 $accept: program $end

    1 program: decl_list

    2 save_id: ID

    3 decl_list: decl_list decl
    4          | decl

    5 decl: var_decl
    6     | func_decl

    7 var_decl: type_spec save_id SEMI

    8 @1: %empty

    9 @2: %empty

   10 var_decl: type_spec save_id @1 LBRACKET NUM @2 RBRACKET SEMI

   11 type_spec: INT
   12          | VOID

   13 @3: %empty

   14 func_decl: type_spec save_id @3 LPAREN params RPAREN comp_stmt

   15 params: param_list
   16       | VOID

   17 param_list: param_list COMMA param
   18           | param

   19 param: type_spec save_id
   20      | type_spec save_id LBRACKET RBRACKET

   21 comp_stmt: LBRACE local_decls stmt_list RBRACE

   22 local_decls: local_decls var_decl
   23            | empty

   24 stmt_list: stmt_list stmt
   25          | empty

   26 stmt: expr_stmt
   27     | comp_stmt
   28     | select_stmt
   29     | iter_stmt
   30     | ret_stmt

   31 expr_stmt: expr SEMI
   32          | SEMI

   33 select_stmt: IF LPAREN expr RPAREN stmt
   34            | IF LPAREN expr RPAREN stmt ELSE stmt

   35 iter_stmt: WHILE LPAREN expr RPAREN stmt

   36 ret_stmt: RETURN SEMI
   37         | RETURN expr SEMI

   38 expr: var ASSIGN expr
   39     | simple_expr

   40 var: save_id

   41 @4: %empty

   42 var: save_id @4 LBRACKET expr RBRACKET

   43 simple_expr: add_expr relop add_expr
   44            | add_expr

   45 relop: LTEQ
   46      | LT
   47      | GT
   48      | GTEQ
   49      | EQ
   50      | NOTEQ

   51 add_expr: add_expr addop term
   52         | term

   53 addop: PLUS
   54      | MINUS

   55 term: term mulop factor
   56     | factor

   57 mulop: TIMES
   58      | OVER

   59 factor: LPAREN expr RPAREN
   60       | var
   61       | call
   62       | NUM

   63 @5: %empty

   64 call: save_id @5 LBRACE args RBRACE

   65 args: arg_list
   66     | empty

   67 arg_list: arg_list COMMA expr
   68         | expr

   69 empty: %empty


Terminals, with rules where they appear

$end (0) 0
error (256)
IF (258) 33 34
ELSE (259) 34
INT (260) 11
RETURN (261) 36 37
VOID (262) 12 16
WHILE (263) 35
ID (264) 2
NUM (265) 10 62
PLUS (266) 53
MINUS (267) 54
TIMES (268) 57
OVER (269) 58
LT (270) 46
LTEQ (271) 45
GT (272) 47
GTEQ (273) 48
EQ (274) 49
NOTEQ (275) 50
ASSIGN (276) 38
SEMI (277) 7 10 31 32 36 37
COMMA (278) 17 67
LPAREN (279) 14 33 34 35 59
RPAREN (280) 14 33 34 35 59
LBRACE (281) 21 64
RBRACE (282) 21 64
LBRACKET (283) 10 20 42
RBRACKET (284) 10 20 42
ERROR (285)
COMMENT (286)
COMMENT_ERROR (287)


Nonterminals, with rules where they appear

$accept (33)
    on left: 0
program (34)
    on left: 1, on right: 0
save_id (35)
    on left: 2, on right: 7 10 14 19 20 40 42 64
decl_list (36)
    on left: 3 4, on right: 1 3
decl (37)
    on left: 5 6, on right: 3 4
var_decl (38)
    on left: 7 10, on right: 5 22
@1 (39)
    on left: 8, on right: 10
@2 (40)
    on left: 9, on right: 10
type_spec (41)
    on left: 11 12, on right: 7 10 14 19 20
func_decl (42)
    on left: 14, on right: 6
@3 (43)
    on left: 13, on right: 14
params (44)
    on left: 15 16, on right: 14
param_list (45)
    on left: 17 18, on right: 15 17
param (46)
    on left: 19 20, on right: 17 18
comp_stmt (47)
    on left: 21, on right: 14 27
local_decls (48)
    on left: 22 23, on right: 21 22
stmt_list (49)
    on left: 24 25, on right: 21 24
stmt (50)
    on left: 26 27 28 29 30, on right: 24 33 34 35
expr_stmt (51)
    on left: 31 32, on right: 26
select_stmt (52)
    on left: 33 34, on right: 28
iter_stmt (53)
    on left: 35, on right: 29
ret_stmt (54)
    on left: 36 37, on right: 30
expr (55)
    on left: 38 39, on right: 31 33 34 35 37 38 42 59 67 68
var (56)
    on left: 40 42, on right: 38 60
@4 (57)
    on left: 41, on right: 42
simple_expr (58)
    on left: 43 44, on right: 39
relop (59)
    on left: 45 46 47 48 49 50, on right: 43
add_expr (60)
    on left: 51 52, on right: 43 44 51
addop (61)
    on left: 53 54, on right: 51
term (62)
    on left: 55 56, on right: 51 52 55
mulop (63)
    on left: 57 58, on right: 55
factor (64)
    on left: 59 60 61 62, on right: 55 56
call (65)
    on left: 64, on right: 61
@5 (66)
    on left: 63, on right: 64
args (67)
    on left: 65 66, on right: 64
arg_list (68)
    on left: 67 68, on right: 65 67
empty (69)
    on left: 69, on right: 23 25 66


State 0

    0 $accept: . program $end

    INT   shift, and go to state 1
    VOID  shift, and go to state 2

    program    go to state 3
    decl_list  go to state 4
    decl       go to state 5
    var_decl   go to state 6
    type_spec  go to state 7
    func_decl  go to state 8


State 1

   11 type_spec: INT .

    $default  reduce using rule 11 (type_spec)


State 2

   12 type_spec: VOID .

    $default  reduce using rule 12 (type_spec)


State 3

    0 $accept: program . $end

    $end  shift, and go to state 9


State 4

    1 program: decl_list .
    3 decl_list: decl_list . decl

    INT   shift, and go to state 1
    VOID  shift, and go to state 2

    $default  reduce using rule 1 (program)

    decl       go to state 10
    var_decl   go to state 6
    type_spec  go to state 7
    func_decl  go to state 8


State 5

    4 decl_list: decl .

    $default  reduce using rule 4 (decl_list)


State 6

    5 decl: var_decl .

    $default  reduce using rule 5 (decl)


State 7

    7 var_decl: type_spec . save_id SEMI
   10         | type_spec . save_id @1 LBRACKET NUM @2 RBRACKET SEMI
   14 func_decl: type_spec . save_id @3 LPAREN params RPAREN comp_stmt

    ID  shift, and go to state 11

    save_id  go to state 12


State 8

    6 decl: func_decl .

    $default  reduce using rule 6 (decl)


State 9

    0 $accept: program $end .

    $default  accept


State 10

    3 decl_list: decl_list decl .

    $default  reduce using rule 3 (decl_list)


State 11

    2 save_id: ID .

    $default  reduce using rule 2 (save_id)


State 12

    7 var_decl: type_spec save_id . SEMI
   10         | type_spec save_id . @1 LBRACKET NUM @2 RBRACKET SEMI
   14 func_decl: type_spec save_id . @3 LPAREN params RPAREN comp_stmt

    SEMI  shift, and go to state 13

    LPAREN    reduce using rule 13 (@3)
    $default  reduce using rule 8 (@1)

    @1  go to state 14
    @3  go to state 15


State 13

    7 var_decl: type_spec save_id SEMI .

    $default  reduce using rule 7 (var_decl)


State 14

   10 var_decl: type_spec save_id @1 . LBRACKET NUM @2 RBRACKET SEMI

    LBRACKET  shift, and go to state 16


State 15

   14 func_decl: type_spec save_id @3 . LPAREN params RPAREN comp_stmt

    LPAREN  shift, and go to state 17


State 16

   10 var_decl: type_spec save_id @1 LBRACKET . NUM @2 RBRACKET SEMI

    NUM  shift, and go to state 18


State 17

   14 func_decl: type_spec save_id @3 LPAREN . params RPAREN comp_stmt

    INT   shift, and go to state 1
    VOID  shift, and go to state 19

    type_spec   go to state 20
    params      go to state 21
    param_list  go to state 22
    param       go to state 23


State 18

   10 var_decl: type_spec save_id @1 LBRACKET NUM . @2 RBRACKET SEMI

    $default  reduce using rule 9 (@2)

    @2  go to state 24


State 19

   12 type_spec: VOID .
   16 params: VOID .

    RPAREN    reduce using rule 16 (params)
    $default  reduce using rule 12 (type_spec)


State 20

   19 param: type_spec . save_id
   20      | type_spec . save_id LBRACKET RBRACKET

    ID  shift, and go to state 11

    save_id  go to state 25


State 21

   14 func_decl: type_spec save_id @3 LPAREN params . RPAREN comp_stmt

    RPAREN  shift, and go to state 26


State 22

   15 params: param_list .
   17 param_list: param_list . COMMA param

    COMMA  shift, and go to state 27

    $default  reduce using rule 15 (params)


State 23

   18 param_list: param .

    $default  reduce using rule 18 (param_list)


State 24

   10 var_decl: type_spec save_id @1 LBRACKET NUM @2 . RBRACKET SEMI

    RBRACKET  shift, and go to state 28


State 25

   19 param: type_spec save_id .
   20      | type_spec save_id . LBRACKET RBRACKET

    LBRACKET  shift, and go to state 29

    $default  reduce using rule 19 (param)


State 26

   14 func_decl: type_spec save_id @3 LPAREN params RPAREN . comp_stmt

    LBRACE  shift, and go to state 30

    comp_stmt  go to state 31


State 27

   17 param_list: param_list COMMA . param

    INT   shift, and go to state 1
    VOID  shift, and go to state 2

    type_spec  go to state 20
    param      go to state 32


State 28

   10 var_decl: type_spec save_id @1 LBRACKET NUM @2 RBRACKET . SEMI

    SEMI  shift, and go to state 33


State 29

   20 param: type_spec save_id LBRACKET . RBRACKET

    RBRACKET  shift, and go to state 34


State 30

   21 comp_stmt: LBRACE . local_decls stmt_list RBRACE

    $default  reduce using rule 69 (empty)

    local_decls  go to state 35
    empty        go to state 36


State 31

   14 func_decl: type_spec save_id @3 LPAREN params RPAREN comp_stmt .

    $default  reduce using rule 14 (func_decl)


State 32

   17 param_list: param_list COMMA param .

    $default  reduce using rule 17 (param_list)


State 33

   10 var_decl: type_spec save_id @1 LBRACKET NUM @2 RBRACKET SEMI .

    $default  reduce using rule 10 (var_decl)


State 34

   20 param: type_spec save_id LBRACKET RBRACKET .

    $default  reduce using rule 20 (param)


State 35

   21 comp_stmt: LBRACE local_decls . stmt_list RBRACE
   22 local_decls: local_decls . var_decl

    INT   shift, and go to state 1
    VOID  shift, and go to state 2

    $default  reduce using rule 69 (empty)

    var_decl   go to state 37
    type_spec  go to state 38
    stmt_list  go to state 39
    empty      go to state 40


State 36

   23 local_decls: empty .

    $default  reduce using rule 23 (local_decls)


State 37

   22 local_decls: local_decls var_decl .

    $default  reduce using rule 22 (local_decls)


State 38

    7 var_decl: type_spec . save_id SEMI
   10         | type_spec . save_id @1 LBRACKET NUM @2 RBRACKET SEMI

    ID  shift, and go to state 11

    save_id  go to state 41


State 39

   21 comp_stmt: LBRACE local_decls stmt_list . RBRACE
   24 stmt_list: stmt_list . stmt

    IF      shift, and go to state 42
    RETURN  shift, and go to state 43
    WHILE   shift, and go to state 44
    ID      shift, and go to state 11
    NUM     shift, and go to state 45
    SEMI    shift, and go to state 46
    LPAREN  shift, and go to state 47
    LBRACE  shift, and go to state 30
    RBRACE  shift, and go to state 48

    save_id      go to state 49
    comp_stmt    go to state 50
    stmt         go to state 51
    expr_stmt    go to state 52
    select_stmt  go to state 53
    iter_stmt    go to state 54
    ret_stmt     go to state 55
    expr         go to state 56
    var          go to state 57
    simple_expr  go to state 58
    add_expr     go to state 59
    term         go to state 60
    factor       go to state 61
    call         go to state 62


State 40

   25 stmt_list: empty .

    $default  reduce using rule 25 (stmt_list)


State 41

    7 var_decl: type_spec save_id . SEMI
   10         | type_spec save_id . @1 LBRACKET NUM @2 RBRACKET SEMI

    SEMI  shift, and go to state 13

    $default  reduce using rule 8 (@1)

    @1  go to state 14


State 42

   33 select_stmt: IF . LPAREN expr RPAREN stmt
   34            | IF . LPAREN expr RPAREN stmt ELSE stmt

    LPAREN  shift, and go to state 63


State 43

   36 ret_stmt: RETURN . SEMI
   37         | RETURN . expr SEMI

    ID      shift, and go to state 11
    NUM     shift, and go to state 45
    SEMI    shift, and go to state 64
    LPAREN  shift, and go to state 47

    save_id      go to state 49
    expr         go to state 65
    var          go to state 57
    simple_expr  go to state 58
    add_expr     go to state 59
    term         go to state 60
    factor       go to state 61
    call         go to state 62


State 44

   35 iter_stmt: WHILE . LPAREN expr RPAREN stmt

    LPAREN  shift, and go to state 66


State 45

   62 factor: NUM .

    $default  reduce using rule 62 (factor)


State 46

   32 expr_stmt: SEMI .

    $default  reduce using rule 32 (expr_stmt)


State 47

   59 factor: LPAREN . expr RPAREN

    ID      shift, and go to state 11
    NUM     shift, and go to state 45
    LPAREN  shift, and go to state 47

    save_id      go to state 49
    expr         go to state 67
    var          go to state 57
    simple_expr  go to state 58
    add_expr     go to state 59
    term         go to state 60
    factor       go to state 61
    call         go to state 62


State 48

   21 comp_stmt: LBRACE local_decls stmt_list RBRACE .

    $default  reduce using rule 21 (comp_stmt)


State 49

   40 var: save_id .
   42    | save_id . @4 LBRACKET expr RBRACKET
   64 call: save_id . @5 LBRACE args RBRACE

    LBRACE    reduce using rule 63 (@5)
    LBRACKET  reduce using rule 41 (@4)
    $default  reduce using rule 40 (var)

    @4  go to state 68
    @5  go to state 69


State 50

   27 stmt: comp_stmt .

    $default  reduce using rule 27 (stmt)


State 51

   24 stmt_list: stmt_list stmt .

    $default  reduce using rule 24 (stmt_list)


State 52

   26 stmt: expr_stmt .

    $default  reduce using rule 26 (stmt)


State 53

   28 stmt: select_stmt .

    $default  reduce using rule 28 (stmt)


State 54

   29 stmt: iter_stmt .

    $default  reduce using rule 29 (stmt)


State 55

   30 stmt: ret_stmt .

    $default  reduce using rule 30 (stmt)


State 56

   31 expr_stmt: expr . SEMI

    SEMI  shift, and go to state 70


State 57

   38 expr: var . ASSIGN expr
   60 factor: var .

    ASSIGN  shift, and go to state 71

    $default  reduce using rule 60 (factor)


State 58

   39 expr: simple_expr .

    $default  reduce using rule 39 (expr)


State 59

   43 simple_expr: add_expr . relop add_expr
   44            | add_expr .
   51 add_expr: add_expr . addop term

    PLUS   shift, and go to state 72
    MINUS  shift, and go to state 73
    LT     shift, and go to state 74
    LTEQ   shift, and go to state 75
    GT     shift, and go to state 76
    GTEQ   shift, and go to state 77
    EQ     shift, and go to state 78
    NOTEQ  shift, and go to state 79

    $default  reduce using rule 44 (simple_expr)

    relop  go to state 80
    addop  go to state 81


State 60

   52 add_expr: term .
   55 term: term . mulop factor

    TIMES  shift, and go to state 82
    OVER   shift, and go to state 83

    $default  reduce using rule 52 (add_expr)

    mulop  go to state 84


State 61

   56 term: factor .

    $default  reduce using rule 56 (term)


State 62

   61 factor: call .

    $default  reduce using rule 61 (factor)


State 63

   33 select_stmt: IF LPAREN . expr RPAREN stmt
   34            | IF LPAREN . expr RPAREN stmt ELSE stmt

    ID      shift, and go to state 11
    NUM     shift, and go to state 45
    LPAREN  shift, and go to state 47

    save_id      go to state 49
    expr         go to state 85
    var          go to state 57
    simple_expr  go to state 58
    add_expr     go to state 59
    term         go to state 60
    factor       go to state 61
    call         go to state 62


State 64

   36 ret_stmt: RETURN SEMI .

    $default  reduce using rule 36 (ret_stmt)


State 65

   37 ret_stmt: RETURN expr . SEMI

    SEMI  shift, and go to state 86


State 66

   35 iter_stmt: WHILE LPAREN . expr RPAREN stmt

    ID      shift, and go to state 11
    NUM     shift, and go to state 45
    LPAREN  shift, and go to state 47

    save_id      go to state 49
    expr         go to state 87
    var          go to state 57
    simple_expr  go to state 58
    add_expr     go to state 59
    term         go to state 60
    factor       go to state 61
    call         go to state 62


State 67

   59 factor: LPAREN expr . RPAREN

    RPAREN  shift, and go to state 88


State 68

   42 var: save_id @4 . LBRACKET expr RBRACKET

    LBRACKET  shift, and go to state 89


State 69

   64 call: save_id @5 . LBRACE args RBRACE

    LBRACE  shift, and go to state 90


State 70

   31 expr_stmt: expr SEMI .

    $default  reduce using rule 31 (expr_stmt)


State 71

   38 expr: var ASSIGN . expr

    ID      shift, and go to state 11
    NUM     shift, and go to state 45
    LPAREN  shift, and go to state 47

    save_id      go to state 49
    expr         go to state 91
    var          go to state 57
    simple_expr  go to state 58
    add_expr     go to state 59
    term         go to state 60
    factor       go to state 61
    call         go to state 62


State 72

   53 addop: PLUS .

    $default  reduce using rule 53 (addop)


State 73

   54 addop: MINUS .

    $default  reduce using rule 54 (addop)


State 74

   46 relop: LT .

    $default  reduce using rule 46 (relop)


State 75

   45 relop: LTEQ .

    $default  reduce using rule 45 (relop)


State 76

   47 relop: GT .

    $default  reduce using rule 47 (relop)


State 77

   48 relop: GTEQ .

    $default  reduce using rule 48 (relop)


State 78

   49 relop: EQ .

    $default  reduce using rule 49 (relop)


State 79

   50 relop: NOTEQ .

    $default  reduce using rule 50 (relop)


State 80

   43 simple_expr: add_expr relop . add_expr

    ID      shift, and go to state 11
    NUM     shift, and go to state 45
    LPAREN  shift, and go to state 47

    save_id   go to state 49
    var       go to state 92
    add_expr  go to state 93
    term      go to state 60
    factor    go to state 61
    call      go to state 62


State 81

   51 add_expr: add_expr addop . term

    ID      shift, and go to state 11
    NUM     shift, and go to state 45
    LPAREN  shift, and go to state 47

    save_id  go to state 49
    var      go to state 92
    term     go to state 94
    factor   go to state 61
    call     go to state 62


State 82

   57 mulop: TIMES .

    $default  reduce using rule 57 (mulop)


State 83

   58 mulop: OVER .

    $default  reduce using rule 58 (mulop)


State 84

   55 term: term mulop . factor

    ID      shift, and go to state 11
    NUM     shift, and go to state 45
    LPAREN  shift, and go to state 47

    save_id  go to state 49
    var      go to state 92
    factor   go to state 95
    call     go to state 62


State 85

   33 select_stmt: IF LPAREN expr . RPAREN stmt
   34            | IF LPAREN expr . RPAREN stmt ELSE stmt

    RPAREN  shift, and go to state 96


State 86

   37 ret_stmt: RETURN expr SEMI .

    $default  reduce using rule 37 (ret_stmt)


State 87

   35 iter_stmt: WHILE LPAREN expr . RPAREN stmt

    RPAREN  shift, and go to state 97


State 88

   59 factor: LPAREN expr RPAREN .

    $default  reduce using rule 59 (factor)


State 89

   42 var: save_id @4 LBRACKET . expr RBRACKET

    ID      shift, and go to state 11
    NUM     shift, and go to state 45
    LPAREN  shift, and go to state 47

    save_id      go to state 49
    expr         go to state 98
    var          go to state 57
    simple_expr  go to state 58
    add_expr     go to state 59
    term         go to state 60
    factor       go to state 61
    call         go to state 62


State 90

   64 call: save_id @5 LBRACE . args RBRACE

    ID      shift, and go to state 11
    NUM     shift, and go to state 45
    LPAREN  shift, and go to state 47

    $default  reduce using rule 69 (empty)

    save_id      go to state 49
    expr         go to state 99
    var          go to state 57
    simple_expr  go to state 58
    add_expr     go to state 59
    term         go to state 60
    factor       go to state 61
    call         go to state 62
    args         go to state 100
    arg_list     go to state 101
    empty        go to state 102


State 91

   38 expr: var ASSIGN expr .

    $default  reduce using rule 38 (expr)


State 92

   60 factor: var .

    $default  reduce using rule 60 (factor)


State 93

   43 simple_expr: add_expr relop add_expr .
   51 add_expr: add_expr . addop term

    PLUS   shift, and go to state 72
    MINUS  shift, and go to state 73

    $default  reduce using rule 43 (simple_expr)

    addop  go to state 81


State 94

   51 add_expr: add_expr addop term .
   55 term: term . mulop factor

    TIMES  shift, and go to state 82
    OVER   shift, and go to state 83

    $default  reduce using rule 51 (add_expr)

    mulop  go to state 84


State 95

   55 term: term mulop factor .

    $default  reduce using rule 55 (term)


State 96

   33 select_stmt: IF LPAREN expr RPAREN . stmt
   34            | IF LPAREN expr RPAREN . stmt ELSE stmt

    IF      shift, and go to state 42
    RETURN  shift, and go to state 43
    WHILE   shift, and go to state 44
    ID      shift, and go to state 11
    NUM     shift, and go to state 45
    SEMI    shift, and go to state 46
    LPAREN  shift, and go to state 47
    LBRACE  shift, and go to state 30

    save_id      go to state 49
    comp_stmt    go to state 50
    stmt         go to state 103
    expr_stmt    go to state 52
    select_stmt  go to state 53
    iter_stmt    go to state 54
    ret_stmt     go to state 55
    expr         go to state 56
    var          go to state 57
    simple_expr  go to state 58
    add_expr     go to state 59
    term         go to state 60
    factor       go to state 61
    call         go to state 62


State 97

   35 iter_stmt: WHILE LPAREN expr RPAREN . stmt

    IF      shift, and go to state 42
    RETURN  shift, and go to state 43
    WHILE   shift, and go to state 44
    ID      shift, and go to state 11
    NUM     shift, and go to state 45
    SEMI    shift, and go to state 46
    LPAREN  shift, and go to state 47
    LBRACE  shift, and go to state 30

    save_id      go to state 49
    comp_stmt    go to state 50
    stmt         go to state 104
    expr_stmt    go to state 52
    select_stmt  go to state 53
    iter_stmt    go to state 54
    ret_stmt     go to state 55
    expr         go to state 56
    var          go to state 57
    simple_expr  go to state 58
    add_expr     go to state 59
    term         go to state 60
    factor       go to state 61
    call         go to state 62


State 98

   42 var: save_id @4 LBRACKET expr . RBRACKET

    RBRACKET  shift, and go to state 105


State 99

   68 arg_list: expr .

    $default  reduce using rule 68 (arg_list)


State 100

   64 call: save_id @5 LBRACE args . RBRACE

    RBRACE  shift, and go to state 106


State 101

   65 args: arg_list .
   67 arg_list: arg_list . COMMA expr

    COMMA  shift, and go to state 107

    $default  reduce using rule 65 (args)


State 102

   66 args: empty .

    $default  reduce using rule 66 (args)


State 103

   33 select_stmt: IF LPAREN expr RPAREN stmt .
   34            | IF LPAREN expr RPAREN stmt . ELSE stmt

    ELSE  shift, and go to state 108

    $default  reduce using rule 33 (select_stmt)


State 104

   35 iter_stmt: WHILE LPAREN expr RPAREN stmt .

    $default  reduce using rule 35 (iter_stmt)


State 105

   42 var: save_id @4 LBRACKET expr RBRACKET .

    $default  reduce using rule 42 (var)


State 106

   64 call: save_id @5 LBRACE args RBRACE .

    $default  reduce using rule 64 (call)


State 107

   67 arg_list: arg_list COMMA . expr

    ID      shift, and go to state 11
    NUM     shift, and go to state 45
    LPAREN  shift, and go to state 47

    save_id      go to state 49
    expr         go to state 109
    var          go to state 57
    simple_expr  go to state 58
    add_expr     go to state 59
    term         go to state 60
    factor       go to state 61
    call         go to state 62


State 108

   34 select_stmt: IF LPAREN expr RPAREN stmt ELSE . stmt

    IF      shift, and go to state 42
    RETURN  shift, and go to state 43
    WHILE   shift, and go to state 44
    ID      shift, and go to state 11
    NUM     shift, and go to state 45
    SEMI    shift, and go to state 46
    LPAREN  shift, and go to state 47
    LBRACE  shift, and go to state 30

    save_id      go to state 49
    comp_stmt    go to state 50
    stmt         go to state 110
    expr_stmt    go to state 52
    select_stmt  go to state 53
    iter_stmt    go to state 54
    ret_stmt     go to state 55
    expr         go to state 56
    var          go to state 57
    simple_expr  go to state 58
    add_expr     go to state 59
    term         go to state 60
    factor       go to state 61
    call         go to state 62


State 109

   67 arg_list: arg_list COMMA expr .

    $default  reduce using rule 67 (arg_list)


State 110

   34 select_stmt: IF LPAREN expr RPAREN stmt ELSE stmt .

    $default  reduce using rule 34 (select_stmt)
